deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-employees-deployment
  labels:
    app: mysql-employees
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql-employees
  template:
    metadata:
      labels:
        app: mysql-employees
    spec:
      containers:
        - name: mysql-employees
          image: tdewin/mysql-employees
          ports:
            - name: mysql-employees
              containerPort: 8080
              protocol: TCP
