pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-employees
  labels:
    app: mysql-employees
spec:
  containers:
    - name: mysql-employees
      image: tdewin/mysql-employees
      ports:
        - name: mysql-employees
          containerPort: 8080
          protocol: TCP
