svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-employees
    service: gateway
  name: mysql-employees-svc
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: mysql-employees
  sessionAffinity: None
  type: LoadBalancer
