ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /\$2
  name: mysql-employees-ingress
spec:
  rules:
  - http:
      paths:
      - path: /employees(/|$)(.*)
        backend:
          serviceName: mysql-employees-svc
          servicePort: 80
